 syntax = "proto3";

 package kmrpb;

 service Master {
     rpc RequestTask(RegisterParams) returns (Task) {}
     rpc ReportTask(ReportInfo) returns (Response) {}
 }

 message RegisterParams {
     string jobName = 1;
     int64 workerID = 2;
     string workerName = 3;
 }

 message ReportInfo {
     TaskInfo taskInfo = 1;
     int64 workerID = 4;
     enum ErrorCode {
         DOING = 0;
         ERROR = 1;
         FINISH = 2;
     }
     ErrorCode retcode = 5;
 }

 message Task {
     int32 retcode = 1;
     TaskInfo taskinfo = 2;
 }

 message TaskInfo {
     string jobNodeName = 1;
     int32 mapredNodeIndex = 2;
     int32 phase = 3;
     int32 subIndex = 4;
 }

 message Response {
     int32 retcode = 1;
 }

 message KV {
     bytes key = 1;
     bytes value = 2;
 }
